--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .hero{
 	height: 100vh;
 	width: 100%;
-	background-image: url(ppwebsite.jpg.jpg); 
+	background-image: url(websitefront.jpg); 
 	background-size: cover;
 	background-position: center;
 }
